--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline';"
     /> -->
-    <title>OpenCorp-Base</title>
+    <title>ShuCheng-Base</title>
   </head>
   <body>
     <div id="root"></div>
